--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,10 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+NEWS_API_KEY="Add your api key"
+NYTIMES_API_KEY="Add your api key"
+GUARDIAN_API_KEY="Add your api key"
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
